[package]
name = "rustpeer"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustpeer"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.3"
futures = "0.3"
futures-util = { version = "0.3.1", default-features = false, features = ["io"] }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
tokio = { version = "1.5", features = ["time", "rt", "net", "sync", "rt-multi-thread"] }
tokio-timer = { git = "https://github.com/tikv/tokio", branch = "tokio-timer-hotfix" }
int-enum = "0.5"
assert-type-eq = "0.1.0"
libc = "0.2"

[build]
rustflags = [
    "-Clink-arg=-undefined","-Clink-arg=dynamic_lookup", # allow undefined symbols
    "-Clink-args=-rdynamic" # export symbols in an executable
]

[profile.dev]
opt-level = 0
debug = true
codegen-units = 4
lto = false
incremental = true
panic = 'unwind'
debug-assertions = true
overflow-checks = false
rpath = false